working demo of tool + output of program